--- a/dataace-crawler/src/main/resources/template/toutiao.xml
+++ b/dataace-crawler/src/main/resources/template/toutiao.xml
@@ -8,7 +8,7 @@
     <!--模板描述-->
     <description>模板描述</description>
    	<!-- 深度 -->
-    <maxDeep>10</maxDeep>
+    <maxDeep>30</maxDeep>
     <!-- 每隔多长时间跑一次，分钟 -->
     <scheduleInterval>30</scheduleInterval>
     
@@ -63,8 +63,7 @@
 	        <jarPath>file:///C:\Users\pan\.m2\repository\org\dataace\toutiao-extractor\0.0.1-SNAPSHOT\toutiao-extractor-0.0.1-SNAPSHOT.jar</jarPath>
 	 </jarPaths>
 	<processors>
-	    
-	   	<!-- java类别的插件配置,url表示jar包所在的路径，支持本地以及网络jar地址 -->
+	
 		<processor type="java">
 			<regexs>
 				<urlRegs>
@@ -79,6 +78,25 @@
 			</page>
 			<target>
 				<class>com.dataace.extractor.toutiao.ArticleListExtractor</class>
+				<props>
+				</props>
+			</target>
+		</processor>
+		
+		<processor type="java">
+			<regexs>
+				<urlRegs>
+					<urlReg>http://toutiao.com/group/\d+/</urlReg>
+				</urlRegs>
+			</regexs>
+			<page>
+				<props>
+					<prop key="encoding">utf-8</prop><!-- 页面级别的参数，在downloader页面的时候会用到 -->
+					<prop key="recrawl">604800000</prop><!-- 该url重爬的时间间隔限制 -->					
+				</props>
+			</page>
+			<target>
+				<class>com.dataace.extractor.toutiao.ArticleDetailExtractor</class>
 				<props>
 				</props>
 			</target>
